[package]
name = "patat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
sha2 = "0.10.8"
merkle_light = "0.4.0"
snow = { version = "0.9.4", features = ["xchachapoly"] }
rust-crypto = "0.2.36"
